spacing corrections for real screen clone

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 body {
   color: #fff;
   background-color: rgb(21, 32, 43);
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
   width: 100%;
 }
@@ -19,11 +19,11 @@ body {
 }
 
 .content-login {
-  padding: 50px 0;
+  padding: 0 15px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 10px;
+  margin-top: 20px;
 }
 
 .logo {
@@ -31,12 +31,13 @@ body {
 }
 
 .logo img {
-  width: 60px;
+  width: 40px;
 }
 
 .login-title {
   font-weight: bold;
-  padding: 30px;
+  padding-top: 30px;
+  margin-bottom: 10px;
   text-align: center;
 }
 
@@ -47,6 +48,7 @@ body {
 .login-form {
   display: flex;
   flex-direction: column;
+  margin: 0 10px;
   max-width: 100%;
 }
 
@@ -54,8 +56,8 @@ body {
   background-color: #192734;
   border-bottom: 3px solid #8899a6;
   color: #88998d;
-  margin: 10px 0 20px 0;
-  padding: 10px 0 0 10px;
+  margin: 10px 0;
+  padding: 5px 10px;
 }
 
 .login-field:focus-within {
@@ -65,8 +67,8 @@ body {
 
 .label-login {
   background-color: #192734;
-  font-size: 16px;
-  font-weight: 800;
+  font-size: 14px;
+  font-weight: 300;
 }
 
 .input-login {
@@ -75,8 +77,10 @@ body {
   background-color: #192734;
   color: #fff;
   display: block;
-  font-size: 26px;
-  height: 50px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 18px;
+  height: 30px;
   width: 100%;
 }
 
@@ -91,23 +95,29 @@ body {
   border: none;
   border-radius: 30px;
   color: #fff;
-  font-size: 18px;
+  font-size: 14px;
   font-weight: bold;
-  padding: 20px;
+  margin-top: 10px;
+  padding: 16px;
 }
 
 .options {
+  font-size: 14px;
   display: flex;
   justify-content: center;
   margin-top: 30px;
+  text-align: center;
 }
 
 .options span {
+  color: #88998d;
   margin: 0 10px;
 }
 
 .options a {
+  font-family: inherit;
+  font-weight: 300;
   color: #1795d4;
-  font-size: 18px;
+  font-size: 14px;
   text-decoration: none;
 }
